fix: validate company types
